# bowerbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.json  pyproject.toml  renovate.json
.github/workflows/: branch-check.yml  ci.yml  release-please.yml
docs/: TROUBLESHOOTING.md
src/bowerbot/: __init__.py  agent.py  cli.py  config.py  dispatcher.py  logging_setup.py  mcp_server.py  project.py  scene_builder.py  state.py  tool_router.py
src/bowerbot/prompts/: assets.md  cameras.md  core.md  library.md  lights.md  materials.md  physics.md  projects.md  scene_building.md  textures.md  variants.md
src/bowerbot/schemas/: __init__.py  assets.py  cameras.py  diagnostics.py  layout.py  lights.py  materials.py  physics.py  scene.py  transforms.py  variants.py
src/bowerbot/services/: __init__.py  asset_service.py  camera_service.py  diagnose_service.py  library_service.py  light_service.py  material_service.py  physics_service.py  project_service.py  stage_service.py  texture_service.py  validation_service.py  variant_service.py
src/bowerbot/skills/: __init__.py  base.py  registry.py
src/bowerbot/tools/: _helpers.py  asset_tools.py  camera_tools.py  diagnose_tools.py  library_tools.py  light_tools.py  material_tools.py  physics_tools.py  project_tools.py  stage_tools.py  texture_tools.py  validation_tools.py  variant_tools.py
src/bowerbot/utils/: asset_folder_utils.py  asset_intake_utils.py  camera_utils.py  dependency_utils.py  diagnostic_registry_utils.py  geometry_utils.py  inspection_utils.py  layout_utils.py  library_utils.py  light_utils.py  material_utils.py  naming_utils.py  physics_diagnostic_utils.py  physics_typing_utils.py  physics_utils.py  scene_integrity_utils.py  stage_utils.py  texture_utils.py  usd_schema_utils.py  validation_utils.py  variant_utils.py
tests/: _helpers.py  test_agent_anthropic.py  test_agent_openai.py  test_apply_physics_api_autoscope.py  test_assembly_skill.py  test_asset_folders.py  test_asset_tools.py  test_camera_tools.py  test_cross_tool_consistency.py  test_cross_tool_matrix.py  test_diagnose_physics.py  test_dispatcher_validation.py  test_end_to_end.py  test_engine.py  test_external_edit_detection.py  test_intake.py  test_library.py  test_library_tools.py  test_light_tools.py  test_lights.py  test_list_prims_physics.py  test_llm.py  test_logging.py  test_material_tools.py  test_materials.py  test_mcp_mode.py  test_physics.py  test_physics_tools.py  test_project.py  test_project_tools.py  test_scene_defaults.py  test_sketchfab.py  test_sketchfab_live.py  test_skills.py  test_stage_tools.py  test_texture_tools.py  test_textures.py  test_tool_service_prompt_invariant.py  test_validation_tools.py  test_variant_tools.py  (+1 more)
tests/agent/: README.md  __init__.py  conftest.py  runner.py  test_scenarios.py
tests/agent/scenarios/: __init__.py  _fixtures.py  conceptual.py  (+10 more)
(+11 files in other folders)
