[project]
name = "bowerbot"
version = "1.13.0"
description = "AI-powered 3D scene assembly from natural language using OpenUSD"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Arturo Morales Rangel", email = "arangel@binarycore.us" },
]
keywords = ["usd", "openusd", "3d", "scene-assembly", "ai", "llm", "digital-twin"]

dependencies = [
    # Core
    # Upper bounds pinned to the next untested major. When upstream
    # ships a new major, we test deliberately and bump the bound in
    # a follow-up release. End users are protected from accidentally
    # picking up breaking changes via `pip install bowerbot`.
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "rich>=13.0,<16",
    # LLM (agent mode only; harmless when running in MCP mode)
    "litellm>=1.40,<2",
    # Tool-param validation (agent mode parity with the MCP SDK's checks)
    "jsonschema>=4.0,<5",
    # MCP server (mcp mode): official SDK + the ASGI stack it serves over.
    "mcp>=1.27,<2",
    "starlette>=0.40,<2",
    "uvicorn>=0.30,<1",
    # HTTP. httpx is still 0.x, so we cap at <1 (which is upstream's
    # planned next major) rather than the next minor.
    "httpx>=0.27,<1",
    # USD (NVIDIA pre-built wheels on PyPI). We are on 26.x.
    "usd-core>=24.11,<27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<5",
]
api = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=12.0,<17",
]

[project.scripts]
bowerbot = "bowerbot.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require live credentials or external services (Sketchfab token, LLM API keys, network calls). Excluded from CI by default; run locally with `pytest -m integration`.",
    "agent_integration: end-to-end agent scenarios that drive the live LLM with the user's OpenAI key from ~/.bowerbot/config.json. Excluded from default test runs (cost money). Run locally with `pytest -m agent_integration tests/agent/`.",
    "agent_smoke: subset of agent_integration covering the highest-signal UX paths. Cheap; run before opening a PR with `pytest -m 'agent_integration and agent_smoke'`.",
    "agent_full: every agent_integration scenario including the heavier multi-step ones. Run on demand for a full UX sweep with `pytest -m 'agent_integration and agent_full'`.",
]

[tool.mypy]
python_version = "3.12"
strict = true
